--- a/PRN231_2_EventFlowerExchange_BE/Repository/Repository.csproj
+++ b/PRN231_2_EventFlowerExchange_BE/Repository/Repository.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="IRepository\" />
-    <Folder Include="Repository\" />
+    <ProjectReference Include="..\BusinessObject\BusinessObject.csproj" />
   </ItemGroup>
 
 </Project>
