--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/appsettings.json
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/appsettings.json
@@ -1,9 +1,15 @@
 {
+  "ApiSettings": {
+    "BaseUrl": "http://localhost:5077/api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local);Uid=sa;Pwd=12345;Database=FlowerExhcangeDB; TrustServerCertificate=True"
+  }
 }
