--- a/PRN231_2_EventFlowerExchange_BE/WebApi_EventFlowerExchange/WebApi_EventFlowerExchange.csproj
+++ b/PRN231_2_EventFlowerExchange_BE/WebApi_EventFlowerExchange/WebApi_EventFlowerExchange.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessObject\BusinessObject.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
 </Project>
