--- a/PRN231_2_EventFlowerExchange_BE/WebApi_EventFlowerExchange/appsettings.json
+++ b/PRN231_2_EventFlowerExchange_BE/WebApi_EventFlowerExchange/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Secret": "nwxDuBQKEMI/VxjCB3uKi03BXeU3+sqByIh3heM6xag="
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local);Uid=sa;Pwd=12345;Database=FlowerExhcangeDB; TrustServerCertificate=True"
   }
