config ValidAudience/Issuer JWT

--- a/PRN231_2_EventFlowerExchange_BE/WebApi_EventFlowerExchange/appsettings.json
+++ b/PRN231_2_EventFlowerExchange_BE/WebApi_EventFlowerExchange/appsettings.json
@@ -2,11 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Authentication": "Debug"
     }
   },
   "AllowedHosts": "*",
-  "Jwt": {
+  "JWT": {
+    "ValidAudience": "http://localhost:7191",
+    "ValidIssuer": "http://localhost:7191",
     "Secret": "nwxDuBQKEMI/VxjCB3uKi03BXeU3+sqByIh3heM6xag="
   },
   "ConnectionStrings": {
