Update_Migration_FE_Batch

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/appsettings.json
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/appsettings.json
@@ -9,5 +9,10 @@
     }
   },
   "AllowedHosts": "*",
- 
+  "CloudinarySettings": {
+    "CloudName": "dhmkqeohl",
+    "ApiKey": "545275547424972",
+    "ApiSecret": "QEhDsfqzS0xTdEP2WQ_V8KlSjEI"
+  }
+
 }
