Update_Database_Fixcode_Batch_Flower_IndexHome

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/appsettings.json
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApiSettings": {
-    "BaseUrl": "http://localhost:5077/api"
+    "BaseUrl": "http://localhost:5077"
   },
   "Logging": {
     "LogLevel": {
