--- a/PRN231_2_EventFlowerExchange_BE/WebApi_EventFlowerExchange/appsettings.json
+++ b/PRN231_2_EventFlowerExchange_BE/WebApi_EventFlowerExchange/appsettings.json
@@ -14,5 +14,16 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local);Uid=sa;Pwd=12345;Database=FlowerExhcangeDB; TrustServerCertificate=True"
+  },
+  "VNPAY": {
+    "Version": "2.1.0",
+    "Command": "pay",
+    "TmnCode": "GT5K71JZ",
+    "HashSecret": "BU8UT4P50HNIZER14LVN5AK2CP0X515R",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "PaymentBackReturnUrl": "http://localhost:5077/api/payment/payment-callback",
+    "CurrCode": "VND",
+    "Locale": "vn"
   }
+
 }
