--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/appsettings.json
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/appsettings.json
@@ -13,6 +13,17 @@
     "CloudName": "dhmkqeohl",
     "ApiKey": "545275547424972",
     "ApiSecret": "QEhDsfqzS0xTdEP2WQ_V8KlSjEI"
+  },
+  "VNPAY": {
+    "Version": "2.1.0",
+    "Command": "pay",
+    "TmnCode": "GT5K71JZ",
+    "HashSecret": "BU8UT4P50HNIZER14LVN5AK2CP0X515R",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "PaymentBackReturnUrl": "http://localhost:5011/CartPages/PaymentSuccess",
+    "CurrCode": "VND",
+    "Locale": "vn"
   }
+
 
 }
